# lts-iiif-ingest-service

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  bucket.py  env.example  generate_manifest.py  iiif_jwt.py  ingest-test.json  ingest.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  test-job.json
.github/: dependabot.yml
.github/.workflows/: ci.yml
.github/workflows/: ci.yml  linting.yml  unit_tests.yml
sample-ingest/: doug-sample-darth-ingest-request.json
sample-manifests/: doug-sample-v2.json  doug-sample-v3.json  lts-ingest-api-example-v2.json  lts-ingest-api-example-v3-iiifprezi2to3.json  success-test-ingest-manifest.json
src/IIIFingest/: asset.py  auth.py  bucket.py  client.py  generate_manifest.py  iiif_jwt.py  ingest.py  settings.py
src/IIIFingest/tests/: test_asset.py  test_bucket.py  test_manifest.py
src/IIIFingest/tests/functional_tests/: test_bucket.py
src/IIIFingest/tests/manifests/: ingest-test.json
src/IIIFingest/tests/unit_tests/: test_bucket.py  test_client.py
src/lts-iiif-ingest-service/: bucket.py
src/lts_iiif_ingest_service/: bucket.py  iiif_jwt.py  ingest.py
src/tests/: manifest_tests.py  test_client.py
tests/: conftest.py  test_client.py  test_manifest.py
tests/functional/: test_bucket.py  test_client.py
tests/notebooks/: proxies.ipynb
tests/unit/: test_asset.py  test_auth.py  test_bucket.py  test_client.py  test_manifest.py
