[metadata]
name = IIIFingest
version = 1.1.1
author = Cole Crawford
author_email = cole_crawford@fas.harvard.edu
description = A wrapper library for interacting with the MPS ingest system for IIIF resources
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Harvard-ATG/lts-iiif-ingest-service
project_urls =
    Bug Tracker = https://github.com/Harvard-ATG/lts-iiif-ingest-service/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    pyjwt
    cryptography
    jsonschema
    boto3
    Pillow
    requests
    shortuuid
    pyIIIFpres
    python-magic
    Deprecated
setup_requires =
    wheel

[options.packages.find]
where = src