[metadata]
name = IIIFingest
version = 1.1.1
author = Cole Crawford
author_email = cole_crawford@fas.harvard.edu
description = A wrapper library for interacting with the MPS ingest system for IIIF resources
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Harvard-ATG/lts-iiif-ingest-service
project_urls =
    Bug Tracker = https://github.com/Harvard-ATG/lts-iiif-ingest-service/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    pyjwt >= 2
    cryptography >= 3
    jsonschema >= 4
    boto3 >= 1.24.66
    Pillow >= 9
    requests >= 2
    shortuuid >= 1
    pyIIIFpres >= 0.1.1
    python-magic >= 0.4.24
    Deprecated >= 1
    backports.zoneinfo;python_version<"3.9"
dev =
    pre-commit >= 2
    isort >= 5
    black >= 22
    flake8 >= 5
    python-dotenv >= 0.21.0
    moto >= 4
    pytest >= 7
    pytest-mock >= 3.8
    pytest-dotenv >= 0.5

[options.packages.find]
where = src