[metadata]
name = IIIFingest
version = 1.2.1
author = Cole Crawford
author_email = cole_crawford@fas.harvard.edu
description = A wrapper library for interacting with the MPS ingest system for IIIF resources
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Harvard-ATG/lts-iiif-ingest-service
project_urls =
    Bug Tracker = https://github.com/Harvard-ATG/lts-iiif-ingest-service/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    pyjwt ~= 2.4
    cryptography >= 3.3,< 41.0
    jsonschema ~= 4.15
    boto3 ~= 1.26
    Pillow ~= 9.3
    requests ~= 2.28
    shortuuid ~= 1.0
    pyIIIFpres ~= 0.1
    python-magic ~= 0.4
    Deprecated ~= 1.2
    backports.zoneinfo ~= 0.2;python_version<"3.9"

[options.extras_require]
all =
  %(dev)s
dev =
    pre-commit ~= 2.20
    isort ~= 5.10
    black ~= 22.8
    flake8 ~= 5.0
    python-dotenv ~= 0.21
    moto ~= 4.0
    pytest ~= 7.1
    pytest-mock ~= 3.8
    pytest-dotenv ~= 0.5
    build ~= 0.9

[options.packages.find]
where = src